Document DA10 files

--- a/upload-file-types/da10.md
+++ b/upload-file-types/da10.md
@@ -2,15 +2,16 @@
 
 # Vaisala DIAL DA10
 
-Vaisala DIAL DA10 Atmospheric Profiler
+Vaisala DIAL Atmospheric Profiler DA10.
 
 Instrument ID: `da10`
 
 ## Recommended files
 
-| File   | Format | Description |
-| ------ | ------ | ----------- |
-| `*.nc` | netCDF |             |
+| File            | Format | Description                                |
+| --------------- | ------ | ------------------------------------------ |
+| `DA10_ABS_*.nc` | netCDF | Attenuated backscatter files.              |
+| `DA10_WV_*.nc`  | netCDF | Water vapor mixing ratio files (optional). |
 
 ## Example
 
